# fastht.ml-fungi

./: README.md  pyproject.toml
src/fastht_ml_fungi/: __init__.py  getting-started.py
