[project]
name = "fastht-ml-fungi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel N. Lang", email = "daniel.lang@velaia.de" }
]
dependencies = [
    "python-fasthtml>=0.2.1",
    "icecream>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = { cmd = "python src/fastht_ml_fungi/__init__.py", env = {} }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastht_ml_fungi"]
